add: responsive font-size for max-width 768px

--- a/style.css
+++ b/style.css
@@ -77,3 +77,9 @@ span {
     background-color: rebeccapurple;
     padding: 2rem 0;
 }
+
+@media (max-width: 768px) {
+    html {
+        font-size: 8px;
+    }
+}
